--- a/my-first-webpage.html
+++ b/my-first-webpage.html
@@ -1,7 +1,7 @@
 <!DOCTYPE html>
 <html>
   <head>
-    <link href="css/styles.css" rel="stylesheet" type="text/css"
+    <link href="css/styles.css" rel="stylesheet" type="text/css">
     <title>Web page #1</title>
   </head>
   <body>
@@ -11,7 +11,8 @@
     <p>This is my <strong>first web page!</strong></p>
     <p>Isn't it nice?</p>
 
-    <img src="img/champagne.jpg" alt="Champagne bottle popping.">
+    <img src="img/champagne.jpg" alt="Champagne bottle popping." width="50%">
+
 
     <p>Here are some things I'm going to learn about coding:</p>
     <ul>
@@ -23,7 +24,7 @@
     </ul>
 
     <p> Here is a link to my <a href="favorite-things.html"> favorite things</a>.</p>
-
+    <img src="img/kingcat.jpg" alt="A photo of a cat with a crown, liquor, and a mustache.">
     <p>Check out <a href="http://www.epicodus.com/">Epicodus</a>. It's a great school for learning web programming!</p>
   </body>
 </html>
