Chang name of favorite-things.html to index.html

--- a/favorite-places.html
+++ b/favorite-places.html
@@ -1,17 +1,18 @@
-!<!DOCTYPE html>
+<!DOCTYPE html>
 <html>
   <head>
+    <link href="css/styles.css" rel="stylesheet" type="text/css">
     <title>My Favorite Places </title>
   </head>
   <body>
     <h1>My Favorite Places</h1>
     <h2>Peru!</h2>
       <img src="img/llama.jpg" alt="A photo of a llama in front of Machu Pichu.">
-    <p>blah blah Peru is cool</p>
+    <p>Climbing Machu Pichu is an enlightening experience, especially when the llamas are around to cheer you up in moments of dire desperation! Learn more about Peru <a href="https://en.wikipedia.org/wiki/Peru">here!</a></p>
     <h2>Barcelona!</h2>
       <img src="img/barcelona.jpg" alt="a picture of Barcelona" width="50%">
-    <p>blah blah Barcelona</p>
+    <p>Take selfies of yourself in front of great architectural monuments by Gaudi in Barcelona. for more info look <a href="https://en.wikipedia.org/wiki/List_of_Gaud%C3%AD_buildings">here</a></p>
     <h2>Portland, OR</h2>
-    <p>blah pdx blah</p>
+    <p>Drink beer and ride your damn bike like everyone else. <a href="http://isitraining.in/portland">*YAWN*</a></p>
       <img src="img/pdx.jpg" alt="a picture of PDX" width="50%">
   </body>
